# BLMM

./: .gitignore  LMMPaperSim_cluster.sh  MANIFEST.in  Makefile  README.md  blmm_cluster.py  blmm_cluster.sh  blmm_cluster2.sh  blmm_compare.sh  blmm_config.yml  blmm_serial.py  blmm_vox_llh_lm.nii  multiply.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  simRF_cluster.sh  simlmer_cluster.sh
BLMM/: BLMM.py  _version.py
blmm/: blmm_cluster.py
lib/: FS.py  FS2D.py  PLS.py  SFS.py  SFS2D.py  blmm_batch.py  blmm_concat.py  blmm_estimate.py  blmm_eval.py  blmm_inference.py  blmm_load.py  blmm_setup.py  cSFS2D.py  cvxMatrix2d.py  est2D.py  est2d.py  est3D.py  est3d.py  fileio.py  npMatrix2d.py  npMatrix3d.py  pFS.py  pFS2D.py  pSFS.py  pSFS2D.py  sattherthwaite.py  simRF.py  simRF_BC.py  simRF_DAC.py  simRF_L.py  simlmer.R  simlmer2.R  tools2d.py  tools3d.py
lmer/: Rpreproc.py  cleanup.py  cleanup.sh  lmer_paramEst.R  lmer_paramEst.sh
log/: sim5.e20999763
notebooks/: FS_sandbox.ipynb  GS_sandbox.ipynb  Matrix_Lemmas.ipynb  PLS_sandbox.ipynb
scripts/: cluster_blmm_batch.sh  cluster_blmm_cleanup.sh  cluster_blmm_concat.sh  cluster_blmm_concat2.sh  cluster_blmm_results.sh  cluster_blmm_setup.sh
sim/: LMMPaperSim.py  LMMPaperSim.r  LMMPaperSim.sh  READme_sim.md  Rcleanup.sh  Rpreproc.sh  SATsExample.R  SATsExample.py  blmm_sim_cluster.sh  cleanup.py  cleanup.sh  cleanupR.py  generateData.py  generateData.sh  lmer_paramEst.R  lmer_paramEst.r  lmer_paramEst.sh  schools_full.csv  schools_reduced.csv  simRF.sh  simRF_cluster.sh  tmp.py  tmpLmer.R
src/: ADE.py  HCPdataset.py  blmm_batch.py  blmm_cleanup.py  blmm_cluster.py  blmm_compare.py  blmm_concat.py  blmm_concat2.py  blmm_estimate.py  blmm_inference.py  (+2 more)
(+103 files in other folders)
